// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PipelineCreate test Editing should prefill and retain data while creating remote pipeline 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main pipelineCreateForm"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        action="#"
        class="FormikForm--main"
      >
        <div>
          <div
            class="StyledProps--font StyledProps--main main"
          >
            <div
              class="InputWithIdentifier--txtNameContainer TextInput--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
              >
                <div
                  class="Text--withDocsTooltip"
                  data-tooltip-id="universalInputNameWithId"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    Id
                  </p>
                </div>
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  :
                </p>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-editable-text InputWithIdentifier--idValue"
                      tabindex="0"
                    >
                      <span
                        class="bp3-editable-text-content"
                        style="height: 1px; line-height: 1px; min-width: 0;"
                      >
                        test
                      </span>
                    </div>
                  </span>
                </span>
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="Edit"
                  style="vertical-align: middle; cursor: pointer;"
                >
                  <svg
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="bp3-form-group zeroMargin"
                data-id="name-0"
              >
                <label
                  class="bp3-label"
                  for="name"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="pipelineCreate_name"
                  >
                    name
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="name"
                      placeholder="common.namePlaceholder"
                      type="text"
                      value="pipeline"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
              style="margin-bottom: 0px;"
            >
              <label
                class="Label--main bp3-label descriptionLabel"
                data-tooltip-id="pipelineCreate_description"
              >
                optionalField
              </label>
              <div
                class="bp3-form-group"
                data-id="description-1"
              >
                <div
                  class="bp3-form-content"
                >
                  <textarea
                    autocomplete="off"
                    class="bp3-input bp3-fill"
                    maxlength="1024"
                    name="description"
                    placeholder="common.descriptionPlaceholder"
                  >
                    desc
                  </textarea>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
            >
              <label
                class="Label--main bp3-label descriptionLabel"
                data-tooltip-id="pipelineCreate_tags"
              >
                optionalField
                <span
                  class="bp3-icon StyledProps--main editOpen"
                  data-icon="Edit"
                  data-name="edit"
                  data-testid="tags-edit"
                >
                  <svg
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </label>
            </div>
          </div>
          <div
            class="bp3-divider"
          />
          <p
            class="StyledProps--font StyledProps--main choosePipelineSetupHeader StyledProps--font-variation-h6"
          >
            pipeline.createPipeline.choosePipelineSetupHeader
          </p>
          <div
            class="pipelineCardWrapper"
          >
            <div
              class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--interactive"
              data-index="0"
              tabindex="0"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey600"
                  data-icon="repository"
                >
                  <svg
                    height="16"
                    viewBox="0 0 13 14"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12.438 2.452l-.006-.017a.367.367 0 00-.067-.114l-.004-.007L10.409.125a.374.374 0 00-.28-.125H2.327a.376.376 0 00-.28.125L.095 2.314l-.005.008a.374.374 0 00-.066.113l-.006.017a.37.37 0 00-.018.11v11.064c0 .206.168.374.374.374h11.707a.375.375 0 00.375-.374V2.563a.369.369 0 00-.018-.111zm-7.91 7.86h3.4v.357a.318.318 0 01-.318.318H4.846a.318.318 0 01-.318-.318v-.357zM.75 9.563V6.625h3.03v.357c0 .588.479 1.066 1.067 1.066H7.61c.588 0 1.066-.478 1.066-1.066v-.357h3.03v2.938H.75zm3.03-6.626v.357c0 .588.479 1.067 1.067 1.067H7.61c.589 0 1.067-.479 1.067-1.067v-.357h3.03v2.939H.75V2.937h3.03zm4.15 0v.357a.318.318 0 01-.318.318H4.846a.318.318 0 01-.318-.318v-.357h3.4zm-3.4 3.688h3.4v.357a.318.318 0 01-.319.317H4.846a.317.317 0 01-.318-.317v-.357zM2.493.749h7.468l1.284 1.44H1.21L2.494.748zm9.213 12.502H.75v-2.939h3.03v.357c0 .589.479 1.067 1.067 1.067H7.61c.588 0 1.066-.478 1.066-1.067v-.357h3.03v2.94z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-variation-form-title StyledProps--color StyledProps--color-grey800"
                  >
                    inline
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    common.git.inlineStoreLabel
                  </p>
                </div>
              </div>
            </div>
            <div
              class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--selected Card--interactive"
              data-index="1"
              tabindex="0"
            >
              <span
                class="Card--corner"
              >
                <span
                  class="Card--badge"
                />
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
                  data-icon="main-tick"
                >
                  <svg
                    height="10"
                    viewBox="0 0 11 8"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M9.219.894c.356-.38.982-.413 1.398-.072.391.32.457.857.167 1.236l-.06.07-5.138 5.486c-.362.386-.993.41-1.403.068l-.07-.064-3.2-3.214A.88.88 0 01.95 3.098a1.045 1.045 0 011.328-.003l.074.067 2.443 2.454L9.22.894z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </span>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary7"
                  data-icon="remote-setup"
                >
                  <svg
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M2.524 9.99a7.475 7.475 0 0114.95 0 .325.325 0 00.65 0 8.125 8.125 0 10-8.125 8.125.325.325 0 000-.65A7.475 7.475 0 012.524 9.99zm4.065-.303c0-.18.146-.325.325-.325H9.37V6.905a.325.325 0 11.65 0v2.457h2.457a.325.325 0 110 .65H10.02v2.456a.325.325 0 11-.65 0v-2.456H6.914a.325.325 0 01-.325-.325z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      d="M18.765 13.285l-2.047-2.05a2.332 2.332 0 00-.846-.511c-.7-.233-1.396-.051-1.96.512l-2.051 2.049c-.23.242-.404.531-.512.847-.233.7-.052 1.395.512 1.958l2.05 2.05c.241.229.53.403.845.511.191.065.392.098.593.099.492 0 .962-.208 1.366-.61l2.049-2.05c.23-.242.404-.531.512-.847.233-.7.051-1.394-.512-1.958h.001zm-3.294-1.455c.154.05.297.131.418.24l.606.606-1.181 1.18-1.18-1.18.608-.61c.163-.163.394-.335.73-.237l-.001.001zm-3.014 2.699c.05-.155.132-.298.24-.419l.606-.605 1.181 1.18-1.182 1.181-.608-.61c-.164-.162-.336-.392-.238-.729l.001.002zm2.699 3.013a1.145 1.145 0 01-.419-.24l-.604-.598 1.181-1.182 1.18 1.181-.608.61c-.163.162-.393.335-.73.236v-.007zm3.015-2.692c-.05.154-.132.297-.24.418l-.605.598-1.181-1.18 1.18-1.181.61.608c.163.163.335.393.237.73"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-variation-form-title StyledProps--color StyledProps--color-primary7"
                  >
                    remote
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    common.git.remoteStoreLabel
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main gitSyncForm StyledProps--padding-top-large"
          >
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <div
                class="Layout--vertical StyledProps--main"
              >
                <div
                  class="bp3-form-group"
                  data-id="null-2"
                >
                  <label
                    class="bp3-label"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="pipelineCreate_connectorRef"
                    >
                      connectors.title.gitConnector
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                      data-testid="cr-field-connectorRef"
                      style="width: 350px;"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
                        >
                          <p
                            class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                          />
                          <div
                            class="rightStatus"
                          >
                            <span
                              class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                              data-testid="crf-status"
                              icon="full-circle"
                            >
                              <svg
                                data-icon="full-circle"
                                height="6"
                                viewBox="0 0 16 16"
                                width="6"
                              >
                                <desc>
                                  full-circle
                                </desc>
                                <path
                                  d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                            <span
                              class="Tag--main"
                            >
                              <span
                                class="bp3-tag bp3-minimal"
                                id="tag"
                              >
                                <span
                                  class="bp3-text-overflow-ellipsis bp3-fill"
                                >
                                  project
                                </span>
                              </span>
                            </span>
                          </div>
                        </div>
                      </span>
                      <span
                        class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                        icon="chevron-down"
                      >
                        <svg
                          data-icon="chevron-down"
                          height="14"
                          viewBox="0 0 16 16"
                          width="14"
                        >
                          <desc>
                            chevron-down
                          </desc>
                          <path
                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <div
                    class="bp3-form-group"
                    data-id="repo-3"
                  >
                    <label
                      class="bp3-label"
                      for="repo"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="pipelineCreate_repo"
                      >
                        repository
                      </span>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-popover-wrapper Select--main bp3-fill"
                      >
                        <div
                          class="bp3-popover-target"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="repo"
                              placeholder="- common.git.selectRepositoryPlaceholder -"
                              style="padding-right: 0px;"
                              type="text"
                              value="sunnykesh-gitSync"
                            />
                            <span
                              class="bp3-input-action"
                            >
                              <span
                                class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                icon="chevron-down"
                              >
                                <svg
                                  data-icon="chevron-down"
                                  height="14"
                                  viewBox="0 0 16 16"
                                  width="14"
                                >
                                  <desc>
                                    chevron-down
                                  </desc>
                                  <path
                                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <div
                    class="bp3-form-group branchSelector"
                    data-id="branch-4"
                  >
                    <label
                      class="bp3-label"
                      for="branch"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="pipelineCreate_branch"
                      >
                        gitBranch
                      </span>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-popover-wrapper Select--main bp3-fill"
                      >
                        <div
                          class="bp3-popover-target"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="branch"
                              placeholder="- common.git.selectBranchPlaceholder -"
                              style="padding-right: 0px;"
                              type="text"
                              value="master"
                            />
                            <span
                              class="bp3-input-action"
                            >
                              <span
                                class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                icon="chevron-down"
                              >
                                <svg
                                  data-icon="chevron-down"
                                  height="14"
                                  viewBox="0 0 16 16"
                                  width="14"
                                >
                                  <desc>
                                    chevron-down
                                  </desc>
                                  <path
                                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="filePath-5"
                >
                  <label
                    class="bp3-label"
                    for="filePath"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="pipelineCreate_filePath"
                    >
                      gitsync.gitSyncForm.yamlPathLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="filePath"
                        placeholder="gitsync.gitSyncForm.enterYamlPath"
                        type="text"
                        value="./test.yaml"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="bp3-divider"
          />
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-top-large"
          >
            <button
              aria-label="common.templateStartLabel"
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-secondary"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                data-icon="template-library"
              >
                <svg
                  height="12"
                  viewBox="0 0 12 13"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <clippath
                    id="template-library_svg__a"
                  >
                    <path
                      d="M1.8 13c.2 0 .4-.3.4-.6V.6C2.2.3 2 0 1.8 0H.4C.2 0 0 .3 0 .6v11.7c0 .4.2.7.4.7zm8.8 0l.9-.3c.3-.1.5-.4.4-.8L8.9.6C8.8.3 8.5.1 8.1.2l-.9.3c-.4 0-.5.4-.5.7l3.1 11.3c.1.4.5.6.8.5zm-5 0c.2 0 .4-.3.4-.7V.6c0-.3-.2-.6-.4-.6H4.2c-.2 0-.4.3-.4.6v11.7c0 .4.2.7.4.7z"
                    />
                  </clippath>
                  <path
                    clip-path="url(#template-library_svg__a)"
                    d="M-5-5h22v23H-5z"
                    fill="#25a6f7"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                common.templateStartLabel
              </span>
            </button>
          </div>
          <div
            class="StyledProps--font StyledProps--main createPipelineButtons"
          >
            <button
              aria-label="continue"
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                continue
              </span>
            </button>
               
            <button
              aria-label="cancel"
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                cancel
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`PipelineCreate test initializes ok edit pipeline 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main pipelineCreateForm"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        action="#"
        class="FormikForm--main"
      >
        <div>
          <div
            class="StyledProps--font StyledProps--main main"
          >
            <div
              class="InputWithIdentifier--txtNameContainer TextInput--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
              >
                <div
                  class="Text--withDocsTooltip"
                  data-tooltip-id="universalInputNameWithId"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    Id
                  </p>
                </div>
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  :
                </p>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                    >
                      <span
                        class="bp3-editable-text-content"
                        style="height: 1px; line-height: 1px; min-width: 0;"
                      >
                        test
                      </span>
                    </div>
                  </span>
                </span>
              </div>
              <div
                class="bp3-form-group zeroMargin"
                data-id="name-0"
              >
                <label
                  class="bp3-label"
                  for="name"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="pipelineCreate_name"
                  >
                    name
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="name"
                      placeholder="common.namePlaceholder"
                      type="text"
                      value="pipeline"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
              style="margin-bottom: 0px;"
            >
              <label
                class="Label--main bp3-label descriptionLabel"
                data-tooltip-id="pipelineCreate_description"
              >
                optionalField
              </label>
              <div
                class="bp3-form-group"
                data-id="description-1"
              >
                <div
                  class="bp3-form-content"
                >
                  <textarea
                    autocomplete="off"
                    class="bp3-input bp3-fill"
                    maxlength="1024"
                    name="description"
                    placeholder="common.descriptionPlaceholder"
                  >
                    desc
                  </textarea>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
            >
              <label
                class="Label--main bp3-label descriptionLabel"
                data-tooltip-id="pipelineCreate_tags"
              >
                optionalField
                <span
                  class="bp3-icon StyledProps--main editOpen"
                  data-icon="Edit"
                  data-name="edit"
                  data-testid="tags-edit"
                >
                  <svg
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </label>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main createPipelineButtons"
          >
            <button
              aria-label="continue"
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                continue
              </span>
            </button>
               
            <button
              aria-label="cancel"
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                cancel
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`PipelineCreate test initializes ok for CD module 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main pipelineCreateForm"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        action="#"
        class="FormikForm--main"
      >
        <div>
          <div
            class="StyledProps--font StyledProps--main main"
          >
            <div
              class="InputWithIdentifier--txtNameContainer TextInput--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
              >
                <div
                  class="Text--withDocsTooltip"
                  data-tooltip-id="universalInputNameWithId"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    Id
                  </p>
                </div>
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  :
                </p>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                      tabindex="0"
                    >
                      <span
                        class="bp3-editable-text-content"
                        style="height: 1px; line-height: 1px; min-width: 0;"
                      />
                    </div>
                  </span>
                </span>
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="Edit"
                  style="vertical-align: middle; cursor: pointer;"
                >
                  <svg
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="bp3-form-group zeroMargin"
                data-id="name-0"
              >
                <label
                  class="bp3-label"
                  for="name"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="pipelineCreate_name"
                  >
                    name
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="name"
                      placeholder="common.namePlaceholder"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
            >
              <label
                class="Label--main bp3-label descriptionLabel"
                data-tooltip-id="pipelineCreate_description"
              >
                optionalField
                <span
                  class="bp3-icon StyledProps--main editOpen"
                  data-icon="Edit"
                  data-name="edit"
                  data-testid="description-edit"
                >
                  <svg
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </label>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
            >
              <label
                class="Label--main bp3-label descriptionLabel"
                data-tooltip-id="pipelineCreate_tags"
              >
                optionalField
                <span
                  class="bp3-icon StyledProps--main editOpen"
                  data-icon="Edit"
                  data-name="edit"
                  data-testid="tags-edit"
                >
                  <svg
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </label>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-top-large"
          >
            <button
              aria-label="common.templateStartLabel"
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-secondary"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                data-icon="template-library"
              >
                <svg
                  height="12"
                  viewBox="0 0 12 13"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <clippath
                    id="template-library_svg__a"
                  >
                    <path
                      d="M1.8 13c.2 0 .4-.3.4-.6V.6C2.2.3 2 0 1.8 0H.4C.2 0 0 .3 0 .6v11.7c0 .4.2.7.4.7zm8.8 0l.9-.3c.3-.1.5-.4.4-.8L8.9.6C8.8.3 8.5.1 8.1.2l-.9.3c-.4 0-.5.4-.5.7l3.1 11.3c.1.4.5.6.8.5zm-5 0c.2 0 .4-.3.4-.7V.6c0-.3-.2-.6-.4-.6H4.2c-.2 0-.4.3-.4.6v11.7c0 .4.2.7.4.7z"
                    />
                  </clippath>
                  <path
                    clip-path="url(#template-library_svg__a)"
                    d="M-5-5h22v23H-5z"
                    fill="#25a6f7"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                common.templateStartLabel
              </span>
            </button>
          </div>
          <div
            class="StyledProps--font StyledProps--main createPipelineButtons"
          >
            <button
              aria-label="start"
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                start
              </span>
            </button>
               
            <button
              aria-label="cancel"
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                cancel
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`PipelineCreate test initializes ok for CI module 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main pipelineCreateForm"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        action="#"
        class="FormikForm--main"
      >
        <div>
          <div
            class="StyledProps--font StyledProps--main main"
          >
            <div
              class="InputWithIdentifier--txtNameContainer TextInput--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
              >
                <div
                  class="Text--withDocsTooltip"
                  data-tooltip-id="universalInputNameWithId"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    Id
                  </p>
                </div>
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  :
                </p>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                      tabindex="0"
                    >
                      <span
                        class="bp3-editable-text-content"
                        style="height: 1px; line-height: 1px; min-width: 0;"
                      />
                    </div>
                  </span>
                </span>
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="Edit"
                  style="vertical-align: middle; cursor: pointer;"
                >
                  <svg
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="bp3-form-group zeroMargin"
                data-id="name-0"
              >
                <label
                  class="bp3-label"
                  for="name"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="pipelineCreate_name"
                  >
                    name
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="name"
                      placeholder="common.namePlaceholder"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
            >
              <label
                class="Label--main bp3-label descriptionLabel"
                data-tooltip-id="pipelineCreate_description"
              >
                optionalField
                <span
                  class="bp3-icon StyledProps--main editOpen"
                  data-icon="Edit"
                  data-name="edit"
                  data-testid="description-edit"
                >
                  <svg
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </label>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
            >
              <label
                class="Label--main bp3-label descriptionLabel"
                data-tooltip-id="pipelineCreate_tags"
              >
                optionalField
                <span
                  class="bp3-icon StyledProps--main editOpen"
                  data-icon="Edit"
                  data-name="edit"
                  data-testid="tags-edit"
                >
                  <svg
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </label>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-top-large"
          >
            <button
              aria-label="common.templateStartLabel"
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-secondary"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                data-icon="template-library"
              >
                <svg
                  height="12"
                  viewBox="0 0 12 13"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <clippath
                    id="template-library_svg__a"
                  >
                    <path
                      d="M1.8 13c.2 0 .4-.3.4-.6V.6C2.2.3 2 0 1.8 0H.4C.2 0 0 .3 0 .6v11.7c0 .4.2.7.4.7zm8.8 0l.9-.3c.3-.1.5-.4.4-.8L8.9.6C8.8.3 8.5.1 8.1.2l-.9.3c-.4 0-.5.4-.5.7l3.1 11.3c.1.4.5.6.8.5zm-5 0c.2 0 .4-.3.4-.7V.6c0-.3-.2-.6-.4-.6H4.2c-.2 0-.4.3-.4.6v11.7c0 .4.2.7.4.7z"
                    />
                  </clippath>
                  <path
                    clip-path="url(#template-library_svg__a)"
                    d="M-5-5h22v23H-5z"
                    fill="#25a6f7"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                common.templateStartLabel
              </span>
            </button>
          </div>
          <div
            class="StyledProps--font StyledProps--main createPipelineButtons"
          >
            <button
              aria-label="start"
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                start
              </span>
            </button>
               
            <button
              aria-label="cancel"
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                cancel
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`PipelineCreate test initializes ok new pipeline 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main pipelineCreateForm"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        action="#"
        class="FormikForm--main"
      >
        <div>
          <div
            class="StyledProps--font StyledProps--main main"
          >
            <div
              class="InputWithIdentifier--txtNameContainer TextInput--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
              >
                <div
                  class="Text--withDocsTooltip"
                  data-tooltip-id="universalInputNameWithId"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    Id
                  </p>
                </div>
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  :
                </p>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                      tabindex="0"
                    >
                      <span
                        class="bp3-editable-text-content"
                        style="height: 1px; line-height: 1px; min-width: 0;"
                      />
                    </div>
                  </span>
                </span>
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="Edit"
                  style="vertical-align: middle; cursor: pointer;"
                >
                  <svg
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="bp3-form-group zeroMargin"
                data-id="name-0"
              >
                <label
                  class="bp3-label"
                  for="name"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="pipelineCreate_name"
                  >
                    name
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="name"
                      placeholder="common.namePlaceholder"
                      type="text"
                      value="pipeline"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
              style="margin-bottom: 0px;"
            >
              <label
                class="Label--main bp3-label descriptionLabel"
                data-tooltip-id="pipelineCreate_description"
              >
                optionalField
              </label>
              <div
                class="bp3-form-group"
                data-id="description-1"
              >
                <div
                  class="bp3-form-content"
                >
                  <textarea
                    autocomplete="off"
                    class="bp3-input bp3-fill"
                    maxlength="1024"
                    name="description"
                    placeholder="common.descriptionPlaceholder"
                  >
                    desc
                  </textarea>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
            >
              <label
                class="Label--main bp3-label descriptionLabel"
                data-tooltip-id="pipelineCreate_tags"
              >
                optionalField
                <span
                  class="bp3-icon StyledProps--main editOpen"
                  data-icon="Edit"
                  data-name="edit"
                  data-testid="tags-edit"
                >
                  <svg
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </label>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-top-large"
          >
            <button
              aria-label="common.templateStartLabel"
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-secondary"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                data-icon="template-library"
              >
                <svg
                  height="12"
                  viewBox="0 0 12 13"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <clippath
                    id="template-library_svg__a"
                  >
                    <path
                      d="M1.8 13c.2 0 .4-.3.4-.6V.6C2.2.3 2 0 1.8 0H.4C.2 0 0 .3 0 .6v11.7c0 .4.2.7.4.7zm8.8 0l.9-.3c.3-.1.5-.4.4-.8L8.9.6C8.8.3 8.5.1 8.1.2l-.9.3c-.4 0-.5.4-.5.7l3.1 11.3c.1.4.5.6.8.5zm-5 0c.2 0 .4-.3.4-.7V.6c0-.3-.2-.6-.4-.6H4.2c-.2 0-.4.3-.4.6v11.7c0 .4.2.7.4.7z"
                    />
                  </clippath>
                  <path
                    clip-path="url(#template-library_svg__a)"
                    d="M-5-5h22v23H-5z"
                    fill="#25a6f7"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                common.templateStartLabel
              </span>
            </button>
          </div>
          <div
            class="StyledProps--font StyledProps--main createPipelineButtons"
          >
            <button
              aria-label="start"
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                start
              </span>
            </button>
               
            <button
              aria-label="cancel"
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                cancel
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
